# guard-lowcomputer-23

./: LICENSE  readme.md
Lowcomputer/MDK-ARM/: standard_robot.uvguix.discipline  standard_robot.uvoptx  standard_robot.uvprojx
Lowcomputer/Src/: freertos.c  main.c
Lowcomputer/application/: CAN_receive.c  chassis_task.c  gimbal_behaviour.c  gimbal_behaviour.h  gimbal_task.c  gimbal_task.h  servo_task.c  servo_task.h  shoot_task.c  shoot_task.h
Lowcomputer/stm32/: stm32.c  stm32.h
guard_ros/: readme.md
guard_ros/install/: local_setup.sh  setup.sh
guard_ros/log/: latest_build
guard_ros/src/serial_message_service/: CMakeLists.txt  package.xml
guard_ros/src/serial_message_service/include/: serial.h
guard_ros/src/serial_message_service/src/: serial.cpp  serial_message_service.cpp
lowerComputer/: standard_robot.ioc
lowerComputer/Inc/: main.h
lowerComputer/MDK-ARM/: .clangd  standard_robot+standardrobot.cbuild.yml  standard_robot+standardrobot.cprj  standard_robot.cbuild-idx.yml  standard_robot.cproject.yaml  standard_robot.csolution.yaml  standard_robot.uvguix.discipline  standard_robot.uvoptx  standard_robot.uvprojx  startup_stm32f407xx.lst
lowerComputer/Src/: freertos.c  main.c  stm32f4xx_it.c  usart.c  usbd_cdc_if.c
lowerComputer/application/: CAN_receive.c  CAN_receive.h  INS_task.c  INS_task.h  SolveTrajectory.c  auto_task.c  chassis_behaviour.c  chassis_behaviour.h  chassis_task.c  chassis_task.h  connect_task.c  connect_task.h  detect_task.h  gimbal_behaviour.c  gimbal_behaviour.h  gimbal_task.c  gimbal_task.h  oled_task.c  referee.c  referee.h  (+12 more)
(+519 files in other folders)
